fixed link wrapping

--- a/app/assets/stylesheets/components/_calendar-page.scss
+++ b/app/assets/stylesheets/components/_calendar-page.scss
@@ -49,7 +49,7 @@
   }
 
   .calendar-main-container {
-    padding-top: 40px !important;
+    padding-top: 40px;
   }
 
   .event-form-control {
