--- a/app/assets/stylesheets/components/_webflow.scss
+++ b/app/assets/stylesheets/components/_webflow.scss
@@ -4475,7 +4475,6 @@ div,
   z-index: 10 !important;
   width: 50%;
   height: 380px;
-  border-radius: 3px;
   background-image: asset-url('CLUB-FUTURO_anteprima-evento.jpg');
   background-position: 50% 50%;
   background-size: cover;
@@ -4700,7 +4699,9 @@ div,
   background-color: #fff;
 }
 
-.text-link {
+.text-link,
+.event-article-container a,
+.page-postheader a {
   color: #000;
   overflow-wrap: break-word;
   word-wrap: break-word;
@@ -4874,6 +4875,28 @@ div,
   .slider-a-title {
     font-size: 50px;
   }
+  .event-header-info-text,
+  .calendar-main-container,
+  .event-article-container {
+    margin-right: 12px;
+    margin-left: 12px;
+  }
+  .event-article-container {
+    padding-top: 40px;
+  }
+  .event-header-top-info {
+    padding-top: 120px;
+  }
+  .event-header-main-img {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    margin-top: 30px;
+  }
+  .event-header-focus-bar-content {
+    padding-right: 12px;
+    padding-left: 12px;
+  }
   .footer-sitemap-grid {
     width: 100%;
   }
@@ -4912,10 +4935,6 @@ div,
   }
   .footer-sostenitore-img {
     height: 40px;
-  }
-  .event-header-main-img {
-    right: 0px;
-    width: 50%;
   }
 }
 
@@ -5150,23 +5169,6 @@ div,
   }
   .footer-sitemap-block {
     border-top: 1px solid hsla(0, 0%, 100%, 0.3);
-  }
-  .event-header-top-info {
-    padding-top: 120px;
-  }
-  .event-header-info-text {
-    margin-right: 12px;
-    margin-left: 12px;
-  }
-  .event-header-main-img {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    margin-top: 30px;
-  }
-  .event-header-focus-bar-content {
-    padding-right: 12px;
-    padding-left: 12px;
   }
   .event-article-container {
     padding-right: 12px;
